content type validation added
